# HippocraticAI-Assessment

./: .gitignore  README.md
backend/: README.md  db.py  main.py  pyproject.toml  requirements.txt  run_tests.py  seed.py
backend/models/: duel.py  generation.py  questions.py  template.py
backend/routers/: questions.py  templates.py
backend/services/: llm.py  performance.py  question.py
backend/tests/: README.md  conftest.py  test_background_tasks.py  test_duel_workflow.py  test_integration.py  test_llm_service.py  test_model_relationships.py  test_models.py  test_performance_service.py  test_question_endpoints.py  test_question_router_edge_cases.py  test_question_service.py  test_template_endpoints.py  test_template_router_edge_cases.py  test_validation_errors.py
frontend/: README.md  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/questions/: error.tsx  page.tsx
frontend/app/questions/[questionId]/: page.tsx
frontend/app/templates/: page.tsx
frontend/components/: sidebar.tsx
frontend/components/providers/: Providers.tsx
frontend/components/questions/: AskQuestion.tsx  Comparison.tsx  ComparisonList.tsx  NavbarQuestionsList.tsx  NoComparison.tsx  ProcessingQuestion.tsx  QuestionWithSelectedAnswer.tsx  QuestionsList.tsx  QuestionsListSkeleton.tsx
frontend/components/templates/: PromptTemplates.tsx  PromptsListsLoading.tsx  TemplateForm.tsx
frontend/contexts/: QuestionRefreshContext.tsx
frontend/hooks/: usePollDuels.ts
frontend/lib/: polling.ts
frontend/types/: prompts.ts  question.ts
